--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,39 @@
         .student-card h3 {
             margin-bottom: 10px;
         }
+        @media (max-width: 780px) {
+            .container {
+                width: 100%;
+                padding: 10px;
+            }
+            .warp-container {
+                flex-direction: column;
+                height: auto;
+            }
+            .left-container, .right-container {
+                width: 100%;
+                flex: none;
+                overflow-y: auto;
+            }
+            .info-card {
+                height: auto;
+            }
+            .nav {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+            }
+            .nav h1 {
+                font-size: 20px;
+            }
+            .search-card form {
+                flex-direction: column;
+            }
+            .submit-btn {
+                width: 100%;
+            }
 
+        }
     </style>
 </head>
 <body>
